# CX_Lib

./: .gitignore  CMakeLists.txt  README.md  install.sh  mem.txt  memcheck.sh  memory-leaks.txt
lib/: README.md
script/: README.md  object-manager.pl  unit-tests-config.sh  unit-tests-init.sh  unit-tests-terminate.sh
src/: CX_Array.c  CX_Array.h  CX_ArrayString.c  CX_ArrayString.h  CX_BashColor.c  CX_BashColor.h  CX_BasicDictionary.c  CX_BasicDictionary.h  CX_Constantes.h  CX_Constants.h  CX_DoubleLinkedList.c  CX_DoubleLinkedList.h  CX_FileText.c  CX_FileText.h  CX_Logger.c  CX_Logger.h  CX_ObjectManager.c  CX_ObjectManager.h  CX_Status.c  CX_Status.h  CX_String.c  CX_String.h  CX_Template.c  CX_Template.h  CX_Types.h  CX_UTest.c  CX_UTest.h
tests/: README.md
tests/data/: README.md
tests/report/: README.md
tests/src/: README.md  init.c  init.h  test_CX_Array.c  test_CX_ArrayString.c  test_CX_BasicDictionary.c  test_CX_DoubleLinkedList.c  test_CX_FileText.c  test_CX_Logger.c  test_CX_ObjectManager.c  test_CX_Status.c  test_CX_String.c  test_CX_Template.c  test_error_CX_Array.c
